--- a/www/index.html
+++ b/www/index.html
@@ -315,6 +315,7 @@
           <li>r/ponyanarchism
           <li>r/roseluck
           <li>r/rubypinch
+          <li>r/sapphirestone
           <li>r/seriouslyluna
           <li>r/spaceclop
           <li>r/speedingturtle
