--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,13 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v36.61 - 2012-10-15</h3>
+        <p>Tag search matches against +v emotes, before replacing them with their
+        base equivalent. This makes it possible to search for variant emote names.
+        <p>Negative tag search implemented. You can now search for things like
+        <code>+mane -ts -rarity</code> and get just the non-unicorn Mane 6.
+        <p>Default search set to <code>-nonpony -hidden</code>.
+
         <h5>v35.60 - 2012-10-13</h3>
         <p>Emote tags. Every emote has been tagged according to its content.
         Several tools written to process that data and all of it included in
