--- a/www/index.html
+++ b/www/index.html
@@ -292,6 +292,7 @@
           <li>r/mylittlekindle
           <li>r/mylittlelistentothis
           <li>r/mylittlelivestream
+          <li>r/mylittlemotorhead
           <li>r/mylittlemusician
           <li>r/mylittlenanners
           <li>r/mylittlenopenopenope
