--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,10 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v37.62.1 - 2012-10-16</h5>
+        <p>Fixed more bugs in results counting. Tag negation and default tags
+        are thorny.
+
         <h5>v37.62 - 2012-10-16</h5>
         <p>Fixed results counting. No longer counts doubled emotes (as a result
         of variant omission) and shows the effects of hidden-by-default emotes.
