--- a/www/index.html
+++ b/www/index.html
@@ -247,6 +247,7 @@
         yours isn't on this list, and you'd like it to be, message me!
 
         <ul id="supported-subreddits">
+          <li>r/adviceponies
           <li>r/ainbowdash
           <li>r/applebloom
           <li>r/applejack
