--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,15 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v38.63 - 2012-10-19</h5>
+        <p>Fixed merged emotes being missing.
+        <p>Minor optimizations.
+        <p>Global emote converter now tries to automatically scroll enclosing
+        elements where applicable. This makes chat windows far more tolerable.
+        <p>Alt-text is now converted globally.
+        <p>Restyled disabled/nsfw/unknown emote placeholders to be substantially
+        less annoying (they're inline now).
+
         <h5>v37.62.1 - 2012-10-16</h5>
         <p>Fixed more bugs in results counting. Tag negation and default tags
         are thorny.
