Added an option to disable the out-of-sub notifications

--- a/data/options.html
+++ b/data/options.html
@@ -25,6 +25,7 @@
           <label><input id="showAltText" type="checkbox"> Reveal hidden alt-text</label>
           <label><input id="enableGlobalEmotes" type="checkbox"> Convert emotes outside of Reddit</label>
           <label><input id="enableGlobalSearch" type="checkbox"> Show the emote search globally</label>
+          <label><input id="warnCourtesy" type="checkbox"> Enable courtesy notifications</label>
           <label>Search result limit: <input id="searchLimit" type="text"> (high values may slow down search)</label>
           <!--
             Would be nice to use Bootstrap's input-append/add-on "px", but this
