--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,7 +29,13 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
-        <h5>v39.64 - 2012-10-19</h5>
+        <h5>v40.65 - 2012-10-21</h5>
+        <p>Improve unknown emote detection. Handles sidebars better.
+        <p>Add notifications when the user is using emotes in such a way that
+        non-script users will have problems with the post. (Alt-text in
+        non-native emotes, and "blank posts".) Includes an option to disable.
+
+        <h5>v39.64 - 2012-10-21</h5>
         <p>Optimized global emote converter. It now runs nodes in batches of
         1000 with a custom tree walker, and doesn't trawl the DOM for scroll
         information unless absolutely necessary. Fixes problems where BPM would
