--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,11 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v44.70 - 2012-10-27</h5>
+        <p>Fix z-index problems with the search box and make the width of the
+        results area stop changing size so badly.
+        <p>Lots of random internal cleanup.
+
         <h5>v43.69 - 2012-10-25</h5>
         <p>Extra CSS detection now works by introspecting the available
         CSSStyleDeclaration object for properties. Should mean UserScripts are
