--- a/data/options.html
+++ b/data/options.html
@@ -18,14 +18,15 @@
       <div class="span8 offset2">
         <form>
           <legend>Options</legend>
-          <label><input id="enableNSFW" type="checkbox"> Enable NSFW emotes</label>
-          <label><input id="enableExtraCSS" type="checkbox"> Enable extra emote modifiers</label>
-          <label><input id="showUnknownEmotes" type="checkbox"> Show placeholders for unknown emotes (may conflict with other emote scripts)</label>
-          <label><input id="hideDisabledEmotes" type="checkbox"> Hide disabled emotes completely (no placeholders)</label>
-          <label><input id="showAltText" type="checkbox"> Reveal hidden alt-text</label>
-          <label><input id="enableGlobalEmotes" type="checkbox"> Convert emotes outside of Reddit</label>
-          <label><input id="enableGlobalSearch" type="checkbox"> Show the emote search globally</label>
-          <label><input id="warnCourtesy" type="checkbox"> Enable courtesy notifications</label>
+          <label class="checkbox"><input id="enableNSFW" type="checkbox"> Enable NSFW emotes</label>
+          <label class="checkbox"><input id="enableExtraCSS" type="checkbox"> Enable extra emote modifiers</label>
+          <label class="checkbox"><input id="showUnknownEmotes" type="checkbox"> Show placeholders for unknown emotes (may conflict with other emote scripts)</label>
+          <label class="checkbox"><input id="hideDisabledEmotes" type="checkbox"> Hide disabled emotes completely (no placeholders)</label>
+          <label class="checkbox"><input id="showAltText" type="checkbox"> Reveal hidden alt-text</label>
+          <label class="checkbox"><input id="enableGlobalEmotes" type="checkbox"> Convert emotes outside of Reddit</label>
+          <label class="checkbox"><input id="enableGlobalSearch" type="checkbox"> Show the emote search globally</label>
+          <label class="checkbox"><input id="warnCourtesy" type="checkbox"> Enable courtesy notifications</label>
+          <label class="checkbox"><input id="clickToggleSFW" type="checkbox"> When I click a disabled emote, only show SFW emotes</label>
           <label>Search result limit: <input id="searchLimit" type="text"> (high values may slow down search)</label>
           <!--
             Would be nice to use Bootstrap's input-append/add-on "px", but this
