--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,13 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v45.71 - 2012-10-28</h5>
+        <p>Add click toggle option.
+        <p>Improved options page.
+        <p>Search box handles focus better.
+        <p>Alt-text converter now procesess embedded links.
+        <p>Implemented <code>r/</code> search syntax and negative subreddit queries.
+
         <h5>v44.70 - 2012-10-27</h5>
         <p>Fix z-index problems with the search box and make the width of the
         results area stop changing size so badly.
