Random website updates

--- a/www/index.html
+++ b/www/index.html
@@ -53,12 +53,12 @@
         across the site.
 
         <h3>Features</h3>
-        <p><b>Over seventy subreddits and 6,500 emotes.</b> Never miss another
+        <p><b>Over seventy subreddits and 7,000 emotes.</b> Never miss another
         hidden emote.
 
-        <p><b>Powerful built in search.</b> Search by name or by subreddit- every
-        emote at your fingertips. Click the <strong>emotes</strong> button under
-        every comment box.
+        <p><b>Powerful built in search.</b> Search by name, subreddit, or even
+        by tag- every emote at your fingertips. Click the <strong>emotes</strong>
+        button under every comment box.
 
         <p><b>Global emotes.</b> Use emotes outside of Reddit!
 
@@ -83,6 +83,11 @@
         better than any userscript can.
 
         <h3>Installation</h3>
+        <p>Before installing, remember to remove any other emote scripts you
+        have installed. BetterPonymotes replaces all of them and then some, and
+        leaving them will slow your browser down unnecessarily (or even cause
+        conflicts).
+
         <h4>Firefox Installation</h4>
         <img src="firefox-logo.png">
         <p>Install the addon from <a href="betterponymotes.xpi"><code>betterponymotes.xpi</code></a>.
@@ -108,7 +113,6 @@
         run userscripts on Safari.
 
         <p>Options can be changed by going <a href="options.html">here</a>.
-        Please note that custom CSS is not supported for userscripts.
 
         <h3>Updates</h3>
         <p>BetterPonymotes is periodically updated with the latest emotes and
