--- a/www/index.html
+++ b/www/index.html
@@ -161,6 +161,7 @@
           <li>r/cuttershy
           <li>r/dashiemotes
           <li>r/daylightemotes
+          <li>r/desktopponies
           <li>r/falloutequestria
           <li>r/flitter
           <li>r/flutterlounge
