--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,10 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v46.75 - 2012-11-07</h5>
+        <p>Bugfix: custom css was being applied globally even when global emotes
+        were disabled.
+
         <h5>v45.71 - 2012-10-28</h5>
         <p>Add click toggle option.
         <p>Improved options page.
