--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
         across the site.
 
         <h3>Features</h3>
-        <p><b>Over seventy subreddits and 7,000 emotes.</b> Never miss another
+        <p><b>Over eighty subreddits and 7,000 emotes.</b> Never miss another
         hidden emote.
 
         <p><b>Powerful built in search.</b> Search by name, subreddit, or even
@@ -169,6 +169,7 @@
           <li>r/futemotes
           <li>r/gallopfrey
           <li>r/gremotes
+          <li>r/himntor
           <li>r/idliketobeatree
           <li>r/ilovedashie
           <li>r/lyra
