--- a/www/index.html
+++ b/www/index.html
@@ -158,6 +158,7 @@
           <li>r/applebloom
           <li>r/applejack
           <li>r/beautybrass
+          <li>r/berrytubelounge
           <li>r/clopclop
           <li>r/cuttershy
           <li>r/dashiemotes
