--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,10 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v49.79 - 2012-11-23</h5>
+        <p>GIF animote fixes, disable MutationObserver on Chrome due to bug,
+        and compatibility with the development version of RES.
+
         <h5>v47.78 - 2012-11-21</h5>
         <p>Include support for animotes on Chrome, by converting APNG's to GIF
         and hosting them externally.
