--- a/www/index.html
+++ b/www/index.html
@@ -183,6 +183,7 @@
           <li>r/mlhfis
           <li>r/mlpdrawingschool
           <li>r/mlplounge
+          <li>r/mlpvectors
           <li>r/molestia
           <li>r/mylittlealcoholic
           <li>r/mylittleandysonic1
