--- a/www/index.html
+++ b/www/index.html
@@ -235,6 +235,7 @@
           <li>r/surprise
           <li>r/tacoshy
           <li>r/tbpimagedump
+          <li>r/tbpimagedump2
           <li>r/thebestpony
           <li>r/twilightsparkle
           <li>r/vinylscratch
