--- a/www/index.html
+++ b/www/index.html
@@ -157,6 +157,7 @@
           <li>r/ainbowdash
           <li>r/applebloom
           <li>r/applejack
+          <li>r/arborus
           <li>r/beautybrass
           <li>r/berrytubelounge
           <li>r/clopclop
