--- a/www/index.html
+++ b/www/index.html
@@ -186,6 +186,7 @@
           <li>r/mlplounge
           <li>r/mlpvectors
           <li>r/molestia
+          <li>r/mylittleadventuretime
           <li>r/mylittlealcoholic
           <li>r/mylittleandysonic1
           <li>r/mylittleanhero23
