--- a/www/index.html
+++ b/www/index.html
@@ -203,6 +203,7 @@
           <li>r/mylittledramaticstory
           <li>r/mylittlefoodmanes
           <li>r/mylittlefortress
+          <li>r/mylittleicons
           <li>r/mylittlekindle
           <li>r/mylittlelistentothis
           <li>r/mylittlelivestream
