--- a/www/index.html
+++ b/www/index.html
@@ -207,6 +207,7 @@
           <li>r/mylittlekindle
           <li>r/mylittlelistentothis
           <li>r/mylittlelivestream
+          <li>r/mylittlemilkyway
           <li>r/mylittlemotorhead
           <li>r/mylittlemusician
           <li>r/mylittlenanners
