--- a/www/index.html
+++ b/www/index.html
@@ -222,6 +222,7 @@
           <li>r/mylittlesquidward
           <li>r/mylittlesupportgroup
           <li>r/mylittletacos
+          <li>r/mylittletwist
           <li>r/mylittlewarhammer
           <li>r/mylittlewelcomewagon
           <li>r/mylittlewtf
