Add r/mlploungesteamgroup and r/ponyloungerts

--- a/www/index.html
+++ b/www/index.html
@@ -184,6 +184,7 @@
           <li>r/mlhfis
           <li>r/mlpdrawingschool
           <li>r/mlplounge
+          <li>r/mlploungesteamgroup
           <li>r/mlpvectors
           <li>r/molestia
           <li>r/mylittleadventuretime
@@ -231,6 +232,7 @@
           <li>r/pinkiepie
           <li>r/ploungemafia
           <li>r/ponyanarchism
+          <li>r/ponyloungerts
           <li>r/roseluck
           <li>r/rubypinch
           <li>r/sapphirestone
