--- a/www/index.html
+++ b/www/index.html
@@ -208,6 +208,7 @@
           <li>r/mylittlekindle
           <li>r/mylittlelistentothis
           <li>r/mylittlelivestream
+          <li>r/mylittlemango
           <li>r/mylittlemilkyway
           <li>r/mylittlemotorhead
           <li>r/mylittlemusician
