--- a/www/index.html
+++ b/www/index.html
@@ -202,6 +202,7 @@
           <li>r/mylittledamon
           <li>r/mylittledaww
           <li>r/mylittledramaticstory
+          <li>r/mylittlefalloutdiary
           <li>r/mylittlefoodmanes
           <li>r/mylittlefortress
           <li>r/mylittleicons
