--- a/www/changelog.html
+++ b/www/changelog.html
@@ -29,6 +29,10 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v57.89 - 2013-01-28</h5>
+        <p>Added domain blacklist due to difficult-to-fix compatability issues
+        with certain sites.
+
         <h5>v56.87 - 2013-01-13</h5>
         <p>Added a sneaky little button to the bottom of every Reddit page that
         dumps the debug logs.
