--- a/www/index.html
+++ b/www/index.html
@@ -188,6 +188,7 @@
           <li>r/mlpvectors
           <li>r/molestia
           <li>r/mylittleadventuretime
+          <li>r/mylittlealicorn
           <li>r/mylittlealcoholic
           <li>r/mylittleandysonic1
           <li>r/mylittleanhero23
