--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
   <div class="container">
     <div class="row">
       <div class="span8 offset2">
-        <h2>BetterPonymotes <small>(current release: <strong>v57.91</strong>)</small></h2>
+        <h2>BetterPonymotes <small>(current release: <strong>v/*{{version}}*/</strong>)</small></h2>
 
         <h3>About</h3>
         <p>BetterPonymotes is a browser addon to display ponymotes across Reddit.
