--- a/web/index.html
+++ b/web/index.html
@@ -150,7 +150,8 @@
 
         <h3>Supported Subreddits</h3>
         <p>BetterPonymotes gets its emotes from the following subreddits. If
-        yours isn't on this list, and you'd like it to be, message me!
+        yours isn't on this list, and you'd like it to be, make a request on
+        <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.
 
         <ul id="supported-subreddits">
           <li>r/adviceponies
