Add Stealth Mode: option to hide all emotes by default

--- a/addon/options.html
+++ b/addon/options.html
@@ -47,6 +47,13 @@
           make them seem to be nonexistent.</p>
 
           <p class="desc">
+          <label class="checkbox"><input id="stealthMode" type="checkbox"> Stealth mode: Minify all emotes by default</label>
+          If this option is enabled, BPM will hide all emotes by default by
+          minifying them, as if they were disabled.</p>
+          <p class="desc">As the click toggle isn't available globally, this
+          option only works on Reddit.</p>
+
+          <p class="desc">
           <label class="checkbox"><input id="showAltText" type="checkbox"> Reveal hidden alt-text</label>
           This option controls the alt-text expander, which displays alt-text on
           emotes next to the image. When BPM does this, it also replaces the
