Update emote count blurb (we have 8k+ now)

--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
         across the site.
 
         <h3>Features</h3>
-        <p><b>Over ninety subreddits and 7,000 emotes.</b> Never miss another
+        <p><b>Over eighty subreddits and 8,000 emotes.</b> Never miss another
         hidden emote.
 
         <p><b>Powerful built in search.</b> Search by name, subreddit, or even
