--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
           <li>r/beautybrass
           <li>r/berrytubelounge
           <li>r/clopclop
+          <li>r/cloudchasermotes
           <li>r/cuttershy
           <li>r/dashiemotes
           <li>r/daylightemotes
