--- a/web/changelog.html
+++ b/web/changelog.html
@@ -29,6 +29,9 @@
         <p>This changelog only lists code changes. Most releases contain whatever
         emote updates were available at the time, and are not mentioned.
 
+        <h5>v59.94 - 2013-03-04</h5>
+        <p>Added stealth mode. Removed out-of-sub emote notifications.
+
         <h5>v57.89 - 2013-01-28</h5>
         <p>Added domain blacklist due to difficult-to-fix compatability issues
         with certain sites.
