--- a/web/index.html
+++ b/web/index.html
@@ -41,211 +41,211 @@
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="span8 offset2">
-        <h2>BetterPonymotes <small>(current release: <strong>v/*{{version}}*/</strong>)</small></h2>
+  <div class="row">
+  <div class="span8 offset2">
 
-        <h3>About</h3>
-        <p>BetterPonymotes is a browser addon to display ponymotes across Reddit.
-        This means things like <code>[]<!---->(/c01)</code> will work outside of
-        <a href="http://reddit.com/r/mylittlepony">r/mylittlepony</a>, but also that
-        ponymotes from other subreddits (such as <code>[]<!---->(/rose6)</code>) will work
-        across the site.
+  <h2>BetterPonymotes <small>(current release: <strong>v/*{{version}}*/</strong>)</small></h2>
 
-        <h3>Features</h3>
-        <p><b>Over eighty subreddits and 8,000 emotes.</b> Never miss another
-        hidden emote.
+  <h3>About</h3>
+  <p>BetterPonymotes is a browser addon to display ponymotes across Reddit. This
+    means things like <code>[]<!---->(/c01)</code> will work outside of
+    <a href="http://reddit.com/r/mylittlepony">r/mylittlepony</a>, but also
+    that ponymotes from other subreddits (such as <code>[]<!---->(/rose6)</code>)
+    will work across the site.</p>
 
-        <p><b>Powerful built in search.</b> Search by name, subreddit, or even
-        by tag- every emote at your fingertips. Click the <strong>emotes</strong>
-        button under every comment box.
+  <h3>Features</h3>
+  <p><b>Over eighty subreddits and 8,000 emotes.</b> Never miss another hidden
+    emote.</p>
 
-        <p><b>Global emotes.</b> Use emotes outside of Reddit!
+  <p><b>Powerful built in search.</b> Search by name, subreddit, or even by tag-
+    every emote at your fingertips. Click the <strong>emotes</strong> button
+    under every comment box.</p>
 
-        <p><b>Flexible and configurable.</b> Choose which emotes or subreddits
-        you want to see.
+  <p><b>Global emotes.</b> Use emotes outside of Reddit!</p>
 
-        <p><b>Alt-text reveal.</b> Shows hover text hidden on emotes, so you don't
-        have to.
+  <p><b>Flexible and configurable.</b> Choose which emotes or subreddits you
+    want to see.</p>
 
-        <p><b>Easy configuration.</b> Every option easily accessible.
+  <p><b>Alt-text reveal.</b> Shows hover text hidden on emotes, so you don't
+    have to.</p>
 
-        <p><b>Chaos script built in.</b> Rotate, flip, and spin flags.
+  <p><b>Easy configuration.</b> Every option easily accessible.</p>
 
-        <p><b>Emote click blocker.</b>
+  <p><b>Chaos script built in.</b> Rotate, flip, and spin flags.</p>
 
-        <!-- Yeah. I went there. -->
-        <p><b>Solid and stable.</b> Bugs happen, but BetterPonymotes is thoroughly
-        tested before every release. Secure and careful coding means Derpy can't
-        accidentally mess it up.
+  <p><b>Emote click blocker.</b></p>
 
-        <p><b>Native addon.</b> BetterPonymotes integrates with your browser
-        better than any userscript can.
+  <!-- Yeah. I went there. -->
+  <p><b>Solid and stable.</b> Bugs happen, but BetterPonymotes is thoroughly
+    tested before every release. Secure and careful coding means Derpy can't
+    accidentally mess it up.</p>
 
-        <h3>Installation</h3>
-        <p>Before installing, remember to remove any other emote scripts you
-        have installed. BetterPonymotes replaces all of them and then some, and
-        leaving them will slow your browser down unnecessarily (or even cause
-        conflicts).
+  <p><b>Native addon.</b> BetterPonymotes integrates with your browser better
+    than any userscript can.</p>
 
-        <h4>Firefox Installation</h4>
-        <img src="firefox-logo.png">
-        <p>Install the addon from <a href="betterponymotes.xpi"><code>betterponymotes.xpi</code></a>.
+  <h3>Installation</h3>
+  <p>Before installing, remember to remove any other emote scripts you have
+    installed. BetterPonymotes replaces all of them and then some, and leaving
+    them will slow your browser down unnecessarily (or even cause conflicts).</p>
 
-        <p>Firefox should handle the file automatically. If not, download the
-        file and drag it onto Firefox.
+  <h4>Firefox Installation</h4>
+  <img src="firefox-logo.png" alt="">
+  <p>Install the addon from <a href="betterponymotes.xpi"><code>betterponymotes.xpi</code></a>.</p>
 
-        <h4>Chrome Installation</h4>
-        <img src="chrome-logo.png">
-        <button onclick="chrome.webstore.install()">Install</button>
+  <p>Firefox should handle the file automatically. If not, download the file and
+    drag it onto Firefox.</p>
 
-        <h4>Opera Installation</h4>
-        <img src="opera-logo.png">
-        <p>Install the addon from <a href="betterponymotes.oex"><code>betterponymotes.oex</code></a>.
+  <h4>Chrome Installation</h4>
+  <img src="chrome-logo.png" alt="">
+  <button onclick="chrome.webstore.install()">Install</button>
 
-        <p>Opera should handle the file automatically. If not, download the file
-        and drag it onto the Extensions page at Opera -> Extensions -> Manage
-        Extensions.
+  <h4>Opera Installation</h4>
+  <img src="opera-logo.png" alt="">
+  <p>Install the addon from <a href="betterponymotes.oex"><code>betterponymotes.oex</code></a>.</p>
 
-        <h4>Safari Installation</h4>
-        <p>A userscript variant is available <a href="betterponymotes.user.js">here</a>.
-        <a href="https://github.com/os0x/NinjaKit">NinjaKit</a> is required to
-        run userscripts on Safari.
+  <p>Opera should handle the file automatically. If not, download the file and
+    drag it onto the Extensions page at Opera -> Extensions -> Manage Extensions.</p>
 
-        <p>Options can be changed by going <a href="options.html">here</a>.
+  <h4>Safari Installation</h4>
+  <p>A userscript variant is available <a href="betterponymotes.user.js">here</a>.
+    <a href="https://github.com/os0x/NinjaKit">NinjaKit</a> is required to
+    run userscripts on Safari.</p>
 
-        <h3>Updates</h3>
-        <p>BetterPonymotes is periodically updated with the latest emotes and
-        features. Your browser will download these automatically.
+  <p>Options can be changed by going <a href="options.html">here</a>.</p>
 
-        <p>Though you do not need to restart your browser for updates, you will
-        need to reload any open pages before the update can take effect. This
-        includes new ponymotes.
+  <h3>Updates</h3>
+  <p>BetterPonymotes is periodically updated with the latest emotes and
+    features. Your browser will download these automatically.</p>
 
-        <h3>Preferences</h3>
-        <p>BetterPonymotes has a built in page for configuration. Follow the
-        instructions for your browser to find it.
+  <p>Though you do not need to restart your browser for updates, you will need
+    to reload any open pages before the update can take effect. This includes
+    new ponymotes.</p>
 
-        <h4>Firefox Preferences</h4>
-        <p>Go to the Addons Manager (<code>about:addons</code>, Ctrl-Shift-A,
-        or Firefox menu -> Add-ons), locate BetterPonymotes in the list, and
-        click the "Preferences" button. Then click the second "Preferences"
-        button.
+  <h3>Preferences</h3>
+  <p>BetterPonymotes has a built in page for configuration. Follow the
+    instructions for your browser to find it.</p>
 
-        <h4>Chrome Preferences</h4>
-        <p>Go to the Extensions page (<code>chrome:extensions</code>, or Wrench menu
-        -> Settings, then click Extensions on the left), locate BetterPonymotes in
-        the list, and click the "Options" link.
+  <h4>Firefox Preferences</h4>
+  <p>Go to the Addons Manager (<code>about:addons</code>, Ctrl-Shift-A, or
+    Firefox menu -> Add-ons), locate BetterPonymotes in the list, and click the
+    "Preferences" button. Then click the second "Preferences" button.</p>
 
-        <h4>Opera Preferences</h4>
-        <p>Go to the Extensions page (Opera -> Extensions -> Manage Extensions),
-        locate BetterPonymotes in the list, and click the Wrench icon -> Preferences.
+  <h4>Chrome Preferences</h4>
+  <p>Go to the Extensions page (<code>chrome:extensions</code>, or Wrench menu
+    -> Settings, then click Extensions on the left), locate BetterPonymotes in
+    the list, and click the "Options" link.</p>
 
-        <h3>Feedback</h3>
-        <p>Bug reports, feature requests, questions, general feedback or anything
-        else should be directed to
-        <a href="http://reddit.com/r/betterponymotes">the subreddit</a>.
+  <h4>Opera Preferences</h4>
+  <p>Go to the Extensions page (Opera -> Extensions -> Manage Extensions),
+    locate BetterPonymotes in the list, and click the Wrench icon ->
+    Preferences.</p>
 
-        <a href="changelog.html"><h3>Changelog</h3></a>
+  <h3>Feedback</h3>
+  <p>Bug reports, feature requests, questions, general feedback or anything
+    else should be directed to <a href="http://reddit.com/r/betterponymotes">the
+    subreddit</a>.</p>
 
-        <h3>Supported Subreddits</h3>
-        <p>BetterPonymotes gets its emotes from the following subreddits. If
-        yours isn't on this list, and you'd like it to be, make a request on
-        <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.
+  <a href="changelog.html"><h3>Changelog</h3></a>
 
-        <ul id="supported-subreddits">
-          <li>r/adviceponies
-          <li>r/ainbowdash
-          <li>r/applebloom
-          <li>r/applejack
-          <li>r/arborus
-          <li>r/beautybrass
-          <li>r/berrytubelounge
-          <li>r/clopclop
-          <li>r/cloudchasermotes
-          <li>r/cuttershy
-          <li>r/dashiemotes
-          <li>r/daylightemotes
-          <li>r/desktopponies
-          <li>r/falloutequestria
-          <li>r/flitter
-          <li>r/flutterlounge
-          <li>r/futemotes
-          <li>r/gallopfrey
-          <li>r/himntor
-          <li>r/idliketobeatree
-          <li>r/ilovedashie
-          <li>r/lyra
-          <li>r/minuette
-          <li>r/mlas1animotes
-          <li>r/mlas1emotes2
-          <li>r/mlas1emotes
-          <li>r/mlas1imagedump
-          <li>r/mlas1party
-          <li>r/mlpdrawingschool
-          <li>r/mlplounge
-          <li>r/mlploungesteamgroup
-          <li>r/mlpvectors
-          <li>r/molestia
-          <li>r/mylittleadventuretime
-          <li>r/mylittlealicorn
-          <li>r/mylittlealcoholic
-          <li>r/mylittleandysonic1
-          <li>r/mylittleanime
-          <li>r/mylittleaprilfools
-          <li>r/mylittlebannertest
-          <li>r/mylittlecelestias
-          <li>r/mylittlechaos
-          <li>r/mylittlecirclejerk
-          <li>r/mylittlecombiners
-          <li>r/mylittleconspiracy
-          <li>r/mylittledaww
-          <li>r/mylittlefalloutdiary
-          <li>r/mylittlefoodmanes
-          <li>r/mylittlefortress
-          <li>r/mylittleicons
-          <li>r/mylittlekindle
-          <li>r/mylittlelistentothis
-          <li>r/mylittlelivestream
-          <li>r/mylittlemango
-          <li>r/mylittlemilkyway
-          <li>r/mylittlemotorhead
-          <li>r/mylittlemusician
-          <li>r/mylittlenanners
-          <li>r/mylittlenopenopenope
-          <li>r/mylittlenosleep
-          <li>r/mylittlensfw
-          <li>r/mylittleonions
-          <li>r/mylittlepony
-          <li>r/mylittleserver
-          <li>r/mylittlesh
-          <li>r/mylittlesquidward
-          <li>r/mylittlesupportgroup
-          <li>r/mylittletacos
-          <li>r/mylittletwist
-          <li>r/mylittlewelcomewagon
-          <li>r/mylittlewtf
-          <li>r/pankakke
-          <li>r/pinkiepie
-          <li>r/ploungemafia
-          <li>r/ponyanarchism
-          <li>r/ponyloungerts
-          <li>r/roseluck
-          <li>r/rubypinch
-          <li>r/sapphirestone
-          <li>r/seriouslyluna
-          <li>r/speedingturtle
-          <li>r/surprise
-          <li>r/tacoshy
-          <li>r/tbpimagedump
-          <li>r/tbpimagedump2
-          <li>r/thebestpony
-          <li>r/twilightsparkle
-          <li>r/vinylscratch
-        </ul>
-        <div id="footer"/>
-      </div>
-    </div>
+  <h3>Supported Subreddits</h3>
+  <p>BetterPonymotes gets its emotes from the following subreddits. If yours
+    isn't on this list, and you'd like it to be, make a request on
+    <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
+
+  <ul id="supported-subreddits">
+    <li>r/adviceponies
+    <li>r/ainbowdash
+    <li>r/applebloom
+    <li>r/applejack
+    <li>r/arborus
+    <li>r/beautybrass
+    <li>r/berrytubelounge
+    <li>r/clopclop
+    <li>r/cloudchasermotes
+    <li>r/cuttershy
+    <li>r/dashiemotes
+    <li>r/daylightemotes
+    <li>r/desktopponies
+    <li>r/falloutequestria
+    <li>r/flitter
+    <li>r/flutterlounge
+    <li>r/futemotes
+    <li>r/gallopfrey
+    <li>r/himntor
+    <li>r/idliketobeatree
+    <li>r/ilovedashie
+    <li>r/lyra
+    <li>r/minuette
+    <li>r/mlas1animotes
+    <li>r/mlas1emotes2
+    <li>r/mlas1emotes
+    <li>r/mlas1imagedump
+    <li>r/mlas1party
+    <li>r/mlpdrawingschool
+    <li>r/mlplounge
+    <li>r/mlploungesteamgroup
+    <li>r/mlpvectors
+    <li>r/molestia
+    <li>r/mylittleadventuretime
+    <li>r/mylittlealicorn
+    <li>r/mylittlealcoholic
+    <li>r/mylittleandysonic1
+    <li>r/mylittleanime
+    <li>r/mylittleaprilfools
+    <li>r/mylittlebannertest
+    <li>r/mylittlecelestias
+    <li>r/mylittlechaos
+    <li>r/mylittlecirclejerk
+    <li>r/mylittlecombiners
+    <li>r/mylittleconspiracy
+    <li>r/mylittledaww
+    <li>r/mylittlefalloutdiary
+    <li>r/mylittlefoodmanes
+    <li>r/mylittlefortress
+    <li>r/mylittleicons
+    <li>r/mylittlekindle
+    <li>r/mylittlelistentothis
+    <li>r/mylittlelivestream
+    <li>r/mylittlemango
+    <li>r/mylittlemilkyway
+    <li>r/mylittlemotorhead
+    <li>r/mylittlemusician
+    <li>r/mylittlenanners
+    <li>r/mylittlenopenopenope
+    <li>r/mylittlenosleep
+    <li>r/mylittlensfw
+    <li>r/mylittleonions
+    <li>r/mylittlepony
+    <li>r/mylittleserver
+    <li>r/mylittlesh
+    <li>r/mylittlesquidward
+    <li>r/mylittlesupportgroup
+    <li>r/mylittletacos
+    <li>r/mylittletwist
+    <li>r/mylittlewelcomewagon
+    <li>r/mylittlewtf
+    <li>r/pankakke
+    <li>r/pinkiepie
+    <li>r/ploungemafia
+    <li>r/ponyanarchism
+    <li>r/ponyloungerts
+    <li>r/roseluck
+    <li>r/rubypinch
+    <li>r/sapphirestone
+    <li>r/seriouslyluna
+    <li>r/speedingturtle
+    <li>r/surprise
+    <li>r/tacoshy
+    <li>r/tbpimagedump
+    <li>r/tbpimagedump2
+    <li>r/thebestpony
+    <li>r/twilightsparkle
+    <li>r/vinylscratch
+  </ul>
+  <div id="footer"></div>
+
+  </div>
+  </div>
   </div>
 </body>
 </html>
