Add r/mylittlewarhammer (putting it back after removal)

--- a/web/index.html
+++ b/web/index.html
@@ -222,6 +222,7 @@
     <li>r/mylittlesupportgroup
     <li>r/mylittletacos
     <li>r/mylittletwist
+    <li>r/mylittlewarhammer
     <li>r/mylittlewelcomewagon
     <li>r/mylittlewtf
     <li>r/pankakke
