--- a/web/index.html
+++ b/web/index.html
@@ -225,6 +225,7 @@
     <li>r/mylittlewarhammer
     <li>r/mylittlewelcomewagon
     <li>r/mylittlewtf
+    <li>r/onetrueprincess
     <li>r/pankakke
     <li>r/pinkiepie
     <li>r/ploungemafia
