--- a/web/changelog.html
+++ b/web/changelog.html
@@ -30,6 +30,11 @@
   <p>This changelog only lists code changes. Most releases contain whatever
     emote updates were available at the time, and are not mentioned.</p>
 
+  <h5>v60.97 - 2013-03-17</h5>
+  <p>Minified emotes and flags now go together more nicely.</p>
+  <p>Fixed spritesheet bleeding on minified emotes.</p>
+  <p>Show flags in sourceinfo hover, and on minified emotes.</p>
+
   <h5>v59.94 - 2013-03-04</h5>
   <p>Added stealth mode. Removed out-of-sub emote notifications.</p>
 
