Typo fix in options page

--- a/addon/options.html
+++ b/addon/options.html
@@ -39,7 +39,7 @@
     When BetterPonymotes encounters a link that appears to be an emote, but
     it doesn't know about it, it generates a small placeholder to show you.
     This can conflict if you have other emote scripts that are converting
-    the emotes- as BPM doesn't know about these. Turn this off if you hare
+    the emotes, as BPM doesn't know about these. Turn this off if you are
     having conflict problems.</p>
 
     <p class="desc">
