--- a/web/index.html
+++ b/web/index.html
@@ -228,6 +228,7 @@
     <li>r/onetrueprincess
     <li>r/pankakke
     <li>r/pinkiepie
+    <li>r/pinkquisition
     <li>r/ploungemafia
     <li>r/ponyanarchism
     <li>r/ponyloungerts
