--- a/web/index.html
+++ b/web/index.html
@@ -229,6 +229,7 @@
     <li>r/speedingturtle
     <li>r/surprise
     <li>r/tacoshy
+    <li>r/themirishponies
     <li>r/tbpimagedump
     <li>r/tbpimagedump2
     <li>r/thebestpony
