Reference the Reddit News emote pack on the home page

--- a/web/index.html
+++ b/web/index.html
@@ -118,12 +118,20 @@
     Extensions -> Manage Extensions), locate BetterPonymotes in the list, and
     click the wrench icon -> Preferences.</p>
 
-  <h3>Safari &amp; Other Platforms</h3>
+  <h3>Safari &amp; Other Browsers</h3>
   <p>A userscript variant is available <a href="betterponymotes.user.js">here</a>.
     You will need to install <a href="https://github.com/os0x/NinjaKit">NinjaKit</a>
     in order to run UserScripts on Safari, so get that first.</p>
   <p>Other browsers <em>may</em> work, if they can be made to run UserScripts.</p>
   <p>Options can be changed by going <a href="options.html">here</a>.</p>
+
+  <h3>Other Platforms</h3>
+  <p>Although BPM itself needs at least UserScript support, you can sometimes
+    still get the emotes on other platforms.
+    <a href="https://play.google.com/store/apps/details?id=reddit.news">Reddit News</a>
+    supports emotes via
+    <a href="http://reddit.com/r/MLPLounge/comments/15yzm4">this unofficial emote pack</a>
+    by <a href="http://reddit.com/user/DinsFire64">/u/DinsFire64</a>.</p>
 
   <h3>Updates</h3>
   <p>BetterPonymotes is periodically updated with the latest emotes and
