Add the Reddit News logo to the page next to the link to the emote pack

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
       float: left;
       width: 230px;
     }
-    #footer {
+    .clear {
       clear: both;
     }
   </style>
@@ -126,12 +126,14 @@
   <p>Options can be changed by going <a href="options.html">here</a>.</p>
 
   <h3>Other Platforms</h3>
+  <img src="redditnews-logo.png" alt="">
   <p>Although BPM itself needs at least UserScript support, you can sometimes
     still get the emotes on other platforms.
     <a href="https://play.google.com/store/apps/details?id=reddit.news">Reddit News</a>
     supports emotes via
     <a href="http://reddit.com/r/MLPLounge/comments/15yzm4">this unofficial emote pack</a>
     by <a href="http://reddit.com/user/DinsFire64">/u/DinsFire64</a>.</p>
+  <div class="clear"></div>
 
   <h3>Updates</h3>
   <p>BetterPonymotes is periodically updated with the latest emotes and
@@ -244,7 +246,7 @@
     <li>r/twilightsparkle
     <li>r/vinylscratch
   </ul>
-  <div id="footer"></div>
+  <div class="clear"></div>
 
   </div>
   </div>
