Change options page text to warn more strongly about large search maximums

--- a/addon/options.html
+++ b/addon/options.html
@@ -81,10 +81,10 @@
     to do this for NSFW emotes. This option disables that check.</p>
 
     <p class="desc">
-    <label>Search result limit: <input id="searchLimit" type="text"> (high values may slow down search)</label>
-    BPM has nearly 7000 emotes, and some search queries return very large
-    numbers of these. Since this tends to slow down browsers, this option
-    controls the maximum number of results BPM will return at a time.</p>
+    <label>Search result limit: <input id="searchLimit" type="text"> (high values can slow down search)</label>
+    BPM has over 8000 emotes, and some search queries return massive amounts of
+    them, which can freeze your browser. This option imposes a maximum on the
+    number of results you can get. A few hundred is safe and recommended.</p>
 
     <p class="desc">
     <!--
