--- a/web/index.html
+++ b/web/index.html
@@ -160,6 +160,7 @@
     <li>r/arborus
     <li>r/beautybrass
     <li>r/berrytubelounge
+    <li>r/bigmacintosh
     <li>r/clopclop
     <li>r/cloudchasermotes
     <li>r/cuttershy
