--- a/web/index.html
+++ b/web/index.html
@@ -168,6 +168,7 @@
     <li>r/desktopponies
     <li>r/falloutequestria
     <li>r/flitter
+    <li>r/flutquisition
     <li>r/flutterlounge
     <li>r/futemotes
     <li>r/gallopfrey
