--- a/web/index.html
+++ b/web/index.html
@@ -243,6 +243,7 @@
     <li>r/themirishponies
     <li>r/tbpimagedump
     <li>r/thebestpony
+    <li>r/twidashmotes
     <li>r/twilightsparkle
     <li>r/vinylscratch
   </ul>
