--- a/web/index.html
+++ b/web/index.html
@@ -200,6 +200,7 @@
     <li>r/mylittlecombiners
     <li>r/mylittleconspiracy
     <li>r/mylittledaww
+    <li>r/mylittledurian
     <li>r/mylittlefalloutdiary
     <li>r/mylittlefoodmanes
     <li>r/mylittlefortress
