--- a/web/index.html
+++ b/web/index.html
@@ -241,6 +241,7 @@
     <li>r/speedingturtle
     <li>r/surprise
     <li>r/tacoshy
+    <li>r/taviquisition
     <li>r/themirishponies
     <li>r/tbpimagedump
     <li>r/thebestpony
