--- a/web/index.html
+++ b/web/index.html
@@ -161,6 +161,7 @@
     <li>r/beautybrass
     <li>r/berrytubelounge
     <li>r/bigmacintosh
+    <li>r/bonquisition
     <li>r/clopclop
     <li>r/cloudchasermotes
     <li>r/cuttershy
