--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
     <li>r/berrytubelounge
     <li>r/bigmacintosh
     <li>r/bonquisition
+    <li>r/braeburnquisition
     <li>r/clopclop
     <li>r/cloudchasermotes
     <li>r/cuttershy
