--- a/web/index.html
+++ b/web/index.html
@@ -245,6 +245,7 @@
     <li>r/tacoshy
     <li>r/taviquisition
     <li>r/themirishponies
+    <li>r/thepleasurehub
     <li>r/tbpimagedump
     <li>r/thebestpony
     <li>r/twidashmotes
