--- a/web/index.html
+++ b/web/index.html
@@ -233,6 +233,7 @@
     <li>r/pankakke
     <li>r/pinkiepie
     <li>r/pinkquisition
+    <li>r/ploungeafterdark
     <li>r/ploungemafia
     <li>r/ponyanarchism
     <li>r/ponyloungerts
