--- a/web/index.html
+++ b/web/index.html
@@ -158,6 +158,7 @@
     <li>r/applebloom
     <li>r/applejack
     <li>r/arborus
+    <li>r/babsquisition
     <li>r/beautybrass
     <li>r/berrytubelounge
     <li>r/bigmacintosh
