Web page update- emote and subreddit count fixes

--- a/web/index.html
+++ b/web/index.html
@@ -54,8 +54,8 @@
     will work across the site.</p>
 
   <h3>Features</h3>
-  <p><b>Over eighty subreddits and 8,000 emotes.</b> Never miss another hidden
-    emote.</p>
+  <p><b>Over one hundred subreddits and 5,000 emotes.</b> Never miss another
+    hidden emote.</p>
 
   <p><b>Powerful built in search.</b> Search by name, subreddit, or even by tag-
     every emote at your fingertips. Click the <strong>emotes</strong> button
