--- a/web/index.html
+++ b/web/index.html
@@ -238,6 +238,7 @@
     <li>r/ploungemafia
     <li>r/ponyanarchism
     <li>r/ponyloungerts
+    <li>r/pwettypwinkpwincesses
     <li>r/roseluck
     <li>r/rubypinch
     <li>r/sapphirestone
