--- a/web/index.html
+++ b/web/index.html
@@ -209,6 +209,7 @@
     <li>r/mylittlefortress
     <li>r/mylittleicons
     <li>r/mylittlekindle
+    <li>r/mylittlekitchen
     <li>r/mylittlelistentothis
     <li>r/mylittlelivestream
     <li>r/mylittlemango
