Add r/mylittlefriends (heavily cherry-picked)

--- a/web/index.html
+++ b/web/index.html
@@ -207,6 +207,7 @@
     <li>r/mylittlefalloutdiary
     <li>r/mylittlefoodmanes
     <li>r/mylittlefortress
+    <li>r/mylittlefriends
     <li>r/mylittleicons
     <li>r/mylittlekindle
     <li>r/mylittlekitchen
