Re-add r/tbpimagedump2

--- a/web/index.html
+++ b/web/index.html
@@ -252,6 +252,7 @@
     <li>r/themirishponies
     <li>r/thepleasurehub
     <li>r/tbpimagedump
+    <li>r/tbpimagedump2
     <li>r/thebestpony
     <li>r/twidashmotes
     <li>r/twilightsparkle
