--- a/web/index.html
+++ b/web/index.html
@@ -159,6 +159,7 @@
     <li>r/applejack
     <li>r/arborus
     <li>r/babsquisition
+    <li>r/batquisition
     <li>r/beautybrass
     <li>r/berrytubelounge
     <li>r/bigmacintosh
