--- a/web/index.html
+++ b/web/index.html
@@ -167,6 +167,7 @@
     <li>r/braeburnquisition
     <li>r/clopclop
     <li>r/cloudchasermotes
+    <li>r/comeinside
     <li>r/cuttershy
     <li>r/daylightemotes
     <li>r/desktopponies
